base/src/test/resources/failure/patterns/issue366.aya.txt
In file $FILE:3:4 ->

  1 | open data Nat : Type 0 | zero | suc Nat
  2 | open data Ray (a : Nat) : Type | zero => eldath
  3 | def ray-eldath (a : Nat) (ed40 : Ray a) : Nat
  4 |  | zero, eldath => suc zero
         ^----------------------^ substituted to `suc zero`
  5 |  | suc n, impossible
  6 |  | zero, eldath => zero
         ^------------------^ substituted to `zero`

Error: The 1st and the 3rd clauses are not confluent because we failed to unify
         suc zero
       and
         zero
What are you doing?
